--- a/views/partials/sign-in.ejs
+++ b/views/partials/sign-in.ejs
@@ -1,15 +1,15 @@
-<form action="/addProfile" method="POST" enctype="multipart/form-data">
+<form action="" method="POST" >
     <div class="mb-3">
         <label for="username" class="form-label">username</label>
-        <input type="text" class="form-control" id="image" name="username" required>
+        <input name="username" type="text" class="form-control"  required>
     </div>
     <div class="mb-3">
         <label for="password" class="form-label">Password</label>
-        <input type="password" class="form-control" id="storename" name="password" required>
+        <input  name="password" type="password" class="form-control" id="storename"  required>
     </div>
     <div class="mb-3">
         <label for="name" class="form-label">Owner Name</label>
-        <input type="text" class="form-control" id="name" name="name" required>
+        <input  name="name" type="text" class="form-control" id="name" required>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
