--- a/views/partials/readProfile.ejs
+++ b/views/partials/readProfile.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Profile Page</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/stylesheets/style2.css" rel="stylesheet">
-</head>
-<body>
+
+
     <div class="container position-relative">
         <a href="/" class="back-btn">
             home
@@ -24,11 +15,9 @@
             <% Profiles.forEach(profile => { %>
                 <div class="profile-container">
                     <div class="profile_username">
-                        <img src="<%= profile.image %>"  onerror="this.src='/images/default-image.jpg';">
-                        <h1 style="font-size: medium;"><%= profile.name %></h1>
+                        <h1 style="font-size: medium;"><%= profile.username %></h1>
                     </div>
                     <div class="store-heading">
-                        <h1><%= profile.storename %></h1>
                         <p class="text-muted"><%= profile.description %></p>
                         <a href="/editProfile/<%= profile._id %>" class="btn btn-primary btn-sm" style="width:100px;">Edit</a>
                         
@@ -76,5 +65,5 @@
     <!-- Bootstrap JS and Icons -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
-</body>
-</html>
+
+
