--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,7 @@
             <div class="col-md-4">
                 <div class="category-box">
                     <img src="/images/men.jpg" alt="Men's Clothing" class="img-fluid" style="height: 400px;">
-                    <h5>Men's Clothing</h5>
+                    <a href="/products/mensclothing" >Mens clothing</a>
                 </div>
             </div>
             <div class="col-md-4">
