--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -17,6 +17,12 @@
                     <label for="name" class="form-label">Product Name</label>
                     <input type="text" id="name" name="name" class="form-control" placeholder="Enter product name" required>
                 </div>
+
+                <div class="mb-3">
+                    <label for="category" class="form-label">Category</label>
+                    <input type="text" id="category" name="category" class="form-control" placeholder="Enter category" required>
+                </div>
+                
                 <div class="mb-3">
                     <label for="price" class="form-label">Price</label>
                     <input type="number" id="price" name="price" class="form-control" placeholder="Enter price" required>
