controller for categories

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -55,7 +55,7 @@
             <div class="col-md-4">
                 <div class="category-box">
                     <img src="/images/women.jpg" alt="Women's Clothing" class="img-fluid"  style="height: 400px; width: 400px;">
-                    <h5>Women's Clothing</h5>
+                    <a href="/products/womensclothing"> womens clothing</a>
                 </div>
             </div>
 
@@ -63,21 +63,21 @@
             <div class="col-md-4">
                 <div class="category-box">
                     <img src="/images/access.jpg" alt="Accessories" class="img-fluid" style="height: 400px;">
-                    <h5>Accessories</h5>
+                    <a href="/products/footwear">Footwear</a>
                 </div>
             </div>
 
             <div class="col-md-4 col-lg-2">
                 <div class="category-box  ">
                     <img src="/images/shoe2.jpg" alt="Footwear" class="img-fluid"  style="height: 400px; width:700px ">
-                    <h5>Footwear</h5>
+                    <a href="/products/accessories">Accessories</a>
                 </div>
             </div>
 
             <div class="col-md-4 col-lg-2">
                 <div class="category-box">
                     <img src="/images/other2.jpg" alt="Vintage Pieces" class="img-fluid" style="height: 400px;  width:700px">
-                    <h5>Vintage Pieces</h5>
+                    <a href="/products/vintage">Vintage</a>
                 </div>
             </div>
 
