--- a/views/profileForm.ejs
+++ b/views/profileForm.ejs
@@ -8,12 +8,12 @@
     
 </head>
 
-<body class="bg-light d-flex align-items-center justify-content-center vh-100">
+<body class=" container bg-light d-flex align-items-center justify-content-center vh-100">
 
     <!-- Edit Profile Form -->
     <div class="card shadow-lg" style="width: 24rem;">
         <div class="card-body">
-            <h3 class="card-title text-center mb-4">Add Profile</h3>
+           
             
             <%-body %>
             
