--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vintage Thrift Shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -26,7 +26,7 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
-                <a href="#" class="btn btn-outline-light me-2">Add to Cart</a>
+                <a href="/cart" class="btn btn-outline-light me-2">Cart</a>
                 <!--
                 code from partials is embedded based on wether the user is signed in or not
                 -->
@@ -49,13 +49,16 @@
             <div class="col-md-4">
                 <div class="category-box">
                     <img src="/images/men.jpg" alt="Men's Clothing" class="img-fluid" style="height: 400px;">
-                    <a href="/products/mensclothing" >Mens clothing</a>
+                    <a href="/mensclothing" >Mens clothing</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="category-box">
                     <img src="/images/women.jpg" alt="Women's Clothing" class="img-fluid"  style="height: 400px; width: 400px;">
-                    <a href="/products/womensclothing"> womens clothing</a>
+
+
+                    <a href="/womenclothing" >Women's Clothing</h5>
+
                 </div>
             </div>
 
@@ -63,21 +66,30 @@
             <div class="col-md-4">
                 <div class="category-box">
                     <img src="/images/access.jpg" alt="Accessories" class="img-fluid" style="height: 400px;">
-                    <a href="/products/footwear">Footwear</a>
+
+
+                    <a href="/accessories" >Accessories</h5>
+
                 </div>
             </div>
 
             <div class="col-md-4 col-lg-2">
                 <div class="category-box  ">
                     <img src="/images/shoe2.jpg" alt="Footwear" class="img-fluid"  style="height: 400px; width:700px ">
-                    <a href="/products/accessories">Accessories</a>
+            
+
+                    <a href="/footware" >Footwear</h5>
+
                 </div>
             </div>
 
             <div class="col-md-4 col-lg-2">
                 <div class="category-box">
                     <img src="/images/other2.jpg" alt="Vintage Pieces" class="img-fluid" style="height: 400px;  width:700px">
-                    <a href="/products/vintage">Vintage</a>
+
+                    
+                    <a href="/vintagepieces" >Vintage Pieces</h5>
+
                 </div>
             </div>
 
