--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -51,7 +51,7 @@
   
                                         <span class="product-status in-stock"><%= product.status %></span> </div>
                                         <div><a href="/editProduct/<%= product._id %>" class="btn btn-primary btn-sm" style="width:100px;">Edit</a>
- <a href="/deleteProduct/<%= product._id %>" class="btn btn-danger btn-sm" style="width:100px;">Delete</a>
+ <a href="/admin/deleteProduct/<%= product._id %>" class="btn btn-danger btn-sm" style="width:100px;">Delete</a>
 
                                    
 </div> 
