--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -6,9 +6,10 @@
             <i class="fa-solid fa-arrow-left"></i>
         </a>
         <!-- Cart Button -->
-        <button class="cart-btn" onclick="window.location.href='/cart'">
+        <a class="cart-btn" href="/cart">
             <i class="bi bi-cart"></i>
-        </button>
+        </a>
+        
         
         
 
@@ -50,7 +51,9 @@
                                         
   
                                         <span class="product-status in-stock"><%= product.status %></span> </div>
-                                        <div><a href="/editProduct/<%= product._id %>" class="btn btn-primary btn-sm" style="width:100px;">Edit</a>
+                                        <div>
+                                            <a href="/admin/editProduct/<%= product._id %>" class="btn btn-primary btn-sm" style="width:100px;">Edit</a>
+
  <a href="/admin/deleteProduct/<%= product._id %>" class="btn btn-danger btn-sm" style="width:100px;">Delete</a>
 
                                    
