--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,8 +22,8 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                 </ul>
-                <form class="d-flex me-3">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <form class="d-flex me-3"  action="/search" method="GET">
+                    <input class="form-control me-2" name="query"   type="text" placeholder="Search " aria-label="Search" required>
                     <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
                 <a href="/cart" class="btn btn-outline-light me-2">Cart</a>
