user authentication complete

--- a/views/partials/landing.ejs
+++ b/views/partials/landing.ejs
@@ -1,1 +1,2 @@
-<a href="/admin/sign-in" class="btn btn-outline-light">sign in</a>
+<a href="/login" class="btn btn-outline-light">Login</a>
+<a href="/register" class="btn btn-outline-light">Register</a>
