--- a/views/partials/loginform.ejs
+++ b/views/partials/loginform.ejs
@@ -5,7 +5,7 @@
     <!-- Login Form (you can add your login form here) -->
     <form action="/login" method="POST">
       <div class="mb-3">
-        <label for="username" class="form-label">Email</label>
+        <label for="username" class="form-label">Username</label>
         <input type="text" class="form-control" id="email" name="username" required>
       </div>
 
