--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,7 @@
             <div class="col-md-4">
                 <div class="category-box">
                     <img src="/images/men.jpg" alt="Men's Clothing" class="img-fluid" style="height: 400px;">
-                    <a href="/mensclothing" >Mens clothing</a>
+                    <a href="/products/mensclothing" >Mens clothing</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -57,7 +57,7 @@
                     <img src="/images/women.jpg" alt="Women's Clothing" class="img-fluid"  style="height: 400px; width: 400px;">
 
 
-                    <a href="/womenclothing" >Women's Clothing</h5>
+                    <a href="/products/womensclothing" >Women's Clothing</h5>
 
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     <img src="/images/access.jpg" alt="Accessories" class="img-fluid" style="height: 400px;">
 
 
-                    <a href="/accessories" >Accessories</h5>
+                    <a href="/products/accessories" >Accessories</h5>
 
                 </div>
             </div>
@@ -78,7 +78,7 @@
                     <img src="/images/shoe2.jpg" alt="Footwear" class="img-fluid"  style="height: 400px; width:700px ">
             
 
-                    <a href="/footware" >Footwear</h5>
+                    <a href="/products/footwear" >Footwear</h5>
 
                 </div>
             </div>
@@ -88,7 +88,7 @@
                     <img src="/images/other2.jpg" alt="Vintage Pieces" class="img-fluid" style="height: 400px;  width:700px">
 
                     
-                    <a href="/vintagepieces" >Vintage Pieces</h5>
+                    <a href="/products/vintage" >Vintage Pieces</h5>
 
                 </div>
             </div>
