--- a/views/partials/productList.ejs
+++ b/views/partials/productList.ejs
@@ -31,7 +31,7 @@
         <div class="product-card col-md-4 col-sm-6 col-12">
           <img src="/<%= product.picture %>" alt="<%= product.title %>" class="product-image">
           <div class="product-info">
-            <h3 class="product-title"><%= product.title %></h3>
+            <h3 class="product-title"><%= product.name %></h3>
             <p class="product-price">$<%= product.price.toFixed(2) %></p>
             <a href="/add-to-cart/<%= product._id %>" >
               <button class="btn btn-primary">
