you should have version of cloudinary and multer-storae-cloudinary which are present in my json file

--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -49,7 +49,7 @@
                     <label for="seller" class="form-label">Seller Name</label>
                     <input type="text" id="seller" name="seller" class="form-control" value="<%= seller %>" readonly>
                 </div>
-              
+                <input type="hidden" name="userId" value="<%= userId %>">
                 <button type="submit" class="btn btn-primary w-100">Add Product</button>
             </form>
         </div>
