--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -49,7 +49,7 @@
             <div class="col-md-4">
                 <div class="category-box">
                     <img src="/images/men.jpg" alt="Men's Clothing" class="img-fluid" style="height: 400px;">
-                    <a href="/products/mensclothing" >Mens clothing</a>
+                    <a href="/products/men" >Mens clothing</a>
                 </div>
             </div>
             <div class="col-md-4">
@@ -57,7 +57,7 @@
                     <img src="/images/women.jpg" alt="Women's Clothing" class="img-fluid"  style="height: 400px; width: 400px;">
 
 
-                    <a href="/products/womensclothing" >Women's Clothing</h5>
+                    <a href="/products/women" >Women's Clothing</h5>
 
                 </div>
             </div>
