--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -1,75 +1,49 @@
+<div class="container position-relative">
+    
 
+    <!-- Profile Section -->
+    <% if (user) { %>
+        <div class="profile-container">
+            <div class="profile_username">
+                <h1 style="font-size: medium;"><%= user.username %></h1>
+            </div>
+        </div>
+    <% } else { %>
+        <h2>No profile yet</h2>
+    <% } %>
 
-    <div class="container position-relative">
-        <a href="/" class="back-btn">
-            home
-            <i class="fa-solid fa-arrow-left"></i>
-        </a>
-        <!-- Cart Button -->
-        <a class="cart-btn" href="/cart">
-            <i class="bi bi-cart"></i>
-        </a>
-        
-        
-        
-
-        <!-- Profile Section -->
-        <% if (user) { %>
-            
-                <div class="profile-container">
-                    <div class="profile_username">
-                        <h1 style="font-size: medium;"><%= user.username %></h1>
-                    </div>
-                    
-                </div>
-            
-        <% } else { %>
-            <h2>No profile yet</h2>
-            
-        <% } %>
-
-        <!-- Product Section -->
-        <% if (products) { %>
-            
-
-            <div class="row g-4">
-
-                <% if (products.length > 0) { %>
-                    <% products.forEach(function(product) { %>
-                        <!-- Product Card -->
-                        <div class="col-lg-3 col-md-4 col-sm-6">
-                            <div class="card product-card">
-                                <img src="<%= product.image %>" class="card-img-top" alt="Product">
-                                <div class="card-body text-center">
-                                    <h2><%= product.name %></h2>
-                                    <div class="prod-price">
-                                        <h5 class="card-title"><%= product.price %></h5>
-                                        
-  
-                                        <span class="product-status in-stock"><%= product.status %></span> </div>
-                                        <div>
-                                            <a href="/admin/editProduct/<%= product._id %>" class="btn btn-primary btn-sm" style="width:100px;">Edit</a>
-
- <a href="/admin/deleteProduct/<%= product._id %>" class="btn btn-danger btn-sm" style="width:100px;">Delete</a>
-
-                                   
-</div> 
+    <!-- Product Section -->
+    <% if (products) { %>
+        <div class="row g-4">
+            <% if (products.length > 0) { %>
+                <% products.forEach(function(product) { %>
+                    <!-- Product Card -->
+                    <div class="col-lg-3 col-md-4 col-sm-6">
+                        <div class="card product-card">
+                            <img src="<%= product.image %>" class="card-img-top" alt="Product">
+                            <div class="card-body text-center">
+                                <h2><%= product.name %></h2>
+                                <div class="prod-price">
+                                    <h5 class="card-title"><%= product.price %></h5>
+                                    <span class="product-status in-stock"><%= product.status %></span>
                                 </div>
+                                <div>
+                                    <a href="/admin/editProduct/<%= product._id %>" class="btn btn-primary btn-sm" style="width:100px;">Edit</a>
+                                    <a href="/admin/deleteProduct/<%= product._id %>" class="btn btn-danger btn-sm" style="width:100px;">Delete</a>
+                                </div> 
                             </div>
                         </div>
-                        
-                    <% }) %>
-                    <a href="/admin/add-product/<%= user._id %>" class="btn btn-md btn-primary m-3">Add Products</a>
-                <% } else { %>
-                    <h2>No products yet</h2>
-                    <a href="/admin/add-product/<%= user._id %>" class="btn btn-md btn-primary m-3">Add Products</a>
-                <% } %>
-            </div>
-        <% } %>
-    </div>
+                    </div>
+                <% }) %>
+                <a href="/admin/add-product/<%= user._id %>" class="btn btn-md btn-primary m-3">Add Products</a>
+            <% } else { %>
+                <h2>No products yet</h2>
+                <a href="/admin/add-product/<%= user._id %>" class="btn btn-md btn-primary m-3">Add Products</a>
+            <% } %>
+        </div>
+    <% } %>
+</div>
 
-    <!-- Bootstrap JS and Icons -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
-
-
+<!-- Bootstrap JS and Icons -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css" rel="stylesheet">
