--- a/views/partials/productList.ejs
+++ b/views/partials/productList.ejs
@@ -3,12 +3,12 @@
 </div>
 <nav aria-label="Page navigation example">
  <ul class="pagination">
-     <li class="page-item <%= page==1? "disabled":"" %>"><a class="page-link" href="/shop-now/<%= Number(page)-1 %>">Previous</a></li>
+     <li class="page-item <%= page==1? "disabled":"" %>"><a class="page-link" href="/products/<%= Category %>/<%= Number(page)-1 %>">Previous</a></li>
      <% for( let index = 1; index <= totalPages; index++ ) { %>
-     <li class="page-item"><a class="page-link" href="/shop-now/<%= index %>"><%= index %></a></li>
+     <li class="page-item"><a class="page-link" href="/products/<%= Category %>/<%= index %>"><%= index %></a></li>
    <% } %>
 
-   <li class="page-item <%= page==totalPages?"disabled":"" %> "><a class="page-link" href="/shop-now/<%= Number(page)+1 %>">Next</a></li>
+   <li class="page-item <%= page==totalPages?"disabled":"" %> "><a class="page-link" href="/products/<%= Category %>/<%= Number(page)+1 %>">Next</a></li>
  </ul>
 </nav>
 
