--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -35,10 +35,10 @@
                         </div>
                     </div>
                 <% }) %>
-                <a href="/admin/add-product/<%= user._id %>" class="btn btn-md btn-primary m-3">Add Products</a>
+                <a href="/admin/add-product" class="btn btn-md btn-primary m-3">Add Products</a>
             <% } else { %>
                 <h2>No products yet</h2>
-                <a href="/admin/add-product/<%= user._id %>" class="btn btn-md btn-primary m-3">Add Products</a>
+                <a href="/admin/add-product" class="btn btn-md btn-primary m-3">Add Products</a>
             <% } %>
         </div>
     <% } %>
