--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -20,7 +20,7 @@
                     <!-- Product Card -->
                     <div class="col-lg-3 col-md-4 col-sm-6">
                         <div class="card product-card">
-                            <img src="<%= product.image %>" class="card-img-top" alt="Product">
+                            <img src="<%= product.picture.imgUrl %>" class="card-img-top" alt="Product">
                             <div class="card-body text-center">
                                 <h2><%= product.name %></h2>
                                 <div class="prod-price">
