--- a/views/partials/productList.ejs
+++ b/views/partials/productList.ejs
@@ -33,10 +33,8 @@
           <div class="product-info">
             <h3 class="product-title"><%= product.name %></h3>
             <p class="product-price">$<%= product.price.toFixed(2) %></p>
-            <a href="/add-to-cart/<%= product._id %>" >
-              <button class="btn btn-primary">
-                Add to Cart
-              </button>
+            <a href="/add-to-cart/<%= product._id %>" class="btn btn-primary">
+              Add to Cart
             </a>
           </div>
     </div>
