--- a/views/partials/landing.ejs
+++ b/views/partials/landing.ejs
@@ -1,2 +1,2 @@
-<a href="/login" class="btn btn-outline-light">Login</a>
-<a href="/register" class="btn btn-outline-light">Register</a>
+<a href="/login" class="btn btn-outline-light me-2">Login</a>
+<a href="/register" class="btn btn-outline-light me-2">Register</a>
