--- a/views/profileForm.ejs
+++ b/views/profileForm.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="/css/form.css">
 </head>
 
 <body class=" container bg-light d-flex align-items-center justify-content-center vh-100">
