green removes description shown with name of product

--- a/views/readProfile.ejs
+++ b/views/readProfile.ejs
@@ -22,10 +22,12 @@
                         <div class="card product-card">
                             <img src="<%= product.picture.imgUrl %>" class="card-img-top" alt="Product">
                             <div class="card-body text-center">
-                                <h2><%= product.name %></h2>
+                                <h4><%= product.name %></h4>
+                                <!-- Product Description -->
+                                <h5><%= product.description %></h5>
                                 <div class="prod-price">
                                     <h5 class="card-title"><%= product.price %></h5>
-                                    <span class="product-status in-stock"><%= product.status %></span>
+                                    
                                 </div>
                                 <div>
                                     <a href="/admin/editProduct/<%= product._id %>" class="btn btn-primary btn-sm" style="width:100px;">Edit</a>
@@ -42,6 +44,7 @@
             <% } %>
         </div>
     <% } %>
+    
 </div>
 
 <!-- Bootstrap JS and Icons -->
