checkout controller added

--- a/views/partials/productList.ejs
+++ b/views/partials/productList.ejs
@@ -20,8 +20,8 @@
         Sort
       </button>
       <ul class="dropdown-menu" aria-labelledby="sortButton">
-        <li><a class="dropdown-item" href="/sort-hightolow">High to Low</a></li>
-        <li><a class="dropdown-item" href="/sort-lowtohigh">Low to High</a></li>
+        <li><a class="dropdown-item" href="/products/:category/sort-hightolow">High to Low</a></li>
+        <li><a class="dropdown-item" href="/products/:category/sort-lowtohigh">Low to High</a></li>
       </ul>
     </div>
   
