--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -1,2 +1,2 @@
-<a href="/readProfile" class="btn btn-outline-light">Profile</a>
-<a href="/user/logout" class="btn btn-outline-light">Log out</a>
+<a href="/readProfile" class="btn btn-outline-light me-2">Profile</a>
+<a href="/user/logout" class="btn btn-outline-light me-2">Log out</a>
