--- a/views/basiclayout.ejs
+++ b/views/basiclayout.ejs
@@ -56,6 +56,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
+          <li class="nav-item">
+            <a href="/cart" class="btn btn-outline-light me-2">Cart</a>
+          </li>
   
           <!-- Search bar -->
           <li class="nav-item">
