--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,3 +1,15 @@
-<h1>Thank you, <%= name %>!</h1>
-<p>Your order has been placed successfully.</p>
-<a href="/">Go Back</a>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Thank you, <%= name %>!</h1>
+    <p>Your order has been placed successfully.</p>
+    <a href="/">Go Back</a>
+</body>
+</html>
